# health-tracker

./: .copilotignore  .env.example  .gitignore  .sleep_test_time  MIGRATION_NO_OWNERSHIP.md  Makefile  TROUBLESHOOTING_NO_OWNERSHIP.md  pyproject.toml  requirements.txt  smart_notify.sh  smart_notify.sh.backup
.github/workflows/: deploy-streamlit.yml
archive/backups/: metrics_app.py.backup  metrics_data.csv.backup.20251114_170604  narratives.json.backup.20251114_170604  smart_notify.sh.backup  smart_notify.sh.corrupted  work_individual_metrics_tracker.yaml.backup  work_individual_metrics_tracker.yaml.bak
archive/unused/: analysis_2025-11-12.txt  analysis_2025-11-13.txt  create_modules.sh  full_diagnostic.sh  (+15 more)
data/: work_individual_metrics_tracker.yaml
docs/: ALERTING_FIX.md  CHANGES_SUMMARY.md  CONFIGURATION_TAB.md  DEPLOYMENT_STREAMLIT.md  DYNAMIC_CONFIGURATION.md  GITHUB_ACTIONS_CD.md  MAKEFILE_REFACTOR.md  MAKEFILE_VARIABLES_REFERENCE.md  METRIC_INVERSION.md  NARRATIVE_FIX.md  QUICK_REFERENCE.md  QUICK_START.md  RECOMMENDED_RESTRUCTURE.md  REDESIGN_SUMMARY.md  REORGANIZATION_PLAN.md  RESTRUCTURING_PROPOSAL.md  SCHEDULE_FIX_SUMMARY.md  SECURITY_SETUP.md  SEVERITY_CLASSIFICATION_UPDATE.md  SLEEP_WAKE_FIX.md  STRUCTURE_AWARE_PLIST_FIX.md  TESTING.md  UI_REDESIGN.md  YES_NO_TO_BINARY_FIX.md
scripts/: create_prod_plist.sh  create_prod_plist.sh.backup  create_test_plist.sh  create_test_plist.sh.backup  run_desktop.sh  run_mobile.sh  setup_prod_schedule.sh  setup_sleep_test_helper.sh  smart_notify.sh
src/: metrics_app.py  metrics_app_mobile.py  preflight_check.py
(+23 files in other folders)
